--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hello</title>
     <body>
-    <h1> Welcome to this site</h1>
+    <h1 style="color: navy;"> Welcome to this site...</h1>
         <h2> more to come!</h2>
         This is a body
     </body>
